added vibrator and disconnect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="desktop_app">www.getApp.com</string>
     <string name="first_screen_text">Download the desktop app\n www.getApp.com</string>
     <string name="li">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
-    <string name="about_saad">An ancient relic of the past.  </string>
-    <string name="about_nauman" />
-    <string name="about_waqas" />
-    <string name="about_minhaj" />
+    <string name="about_saad">Saad Hassan is a network engineer with a sound experience of 4 years. </string>
+    <string name="about_nauman" >Muhammad Nauman is a PHP developer with working experience of a year. </string>
+    <string name="about_waqas">Muhammad Waqas have a passion for Android Developer With a sound 1+ year of experience.</string>
+    <string name="about_minhaj">Minhaj Ud Khan is a MEAN stack developer with proficiency in Node.js. </string>
 </resources>
